GNOME Bugzilla – Bug 766450
video-track: don't leak restriction caps in _sync_capsfilter_with_track
Last modified: 2016-07-04 10:52:01 UTC
When syncing video-track capsfilter, we get current set restriction caps with g_object_get but we never unref it, causing a leak.
Created attachment 327894 [details] [review] video-track: don't leak restriction caps in _sync_capsfilter_with_track
Thanks, pushed: commit 7529e25b49f70c93b55adc6cc2c4548a3231d367 Author: Aurélien Zanelli <aurelien.zanelli@darkosphere.fr> Date: Sat May 14 19:02:57 2016 +0200 video-track: don't leak restriction caps in _sync_capsfilter_with_track() https://bugzilla.gnome.org/show_bug.cgi?id=766450
Should this go into 1.8?