video-track: don't leak restriction caps in _sync_capsfilter_with_track()

https://bugzilla.gnome.org/show_bug.cgi?id=766450